--- a/modules/brushingandlinking/bindings/CMakeLists.txt
+++ b/modules/brushingandlinking/bindings/CMakeLists.txt
@@ -1,4 +1,7 @@
 # Create python module
+if(NOT IVW_USE_PYTHON)
+    message(FATAL_ERROR "Python support is not enabled for Inviwo (see IVW_USE_PYTHON)")
+endif()
 
 find_package(pybind11 CONFIG REQUIRED)
 
