--- a/modules/base/bindings/CMakeLists.txt
+++ b/modules/base/bindings/CMakeLists.txt
@@ -1,4 +1,8 @@
-# Create python module
+# Create python bindings for base module
+
+if(NOT IVW_USE_PYTHON)
+    message(FATAL_ERROR "Python support is not enabled for Inviwo (see IVW_USE_PYTHON)")
+endif()
 
 find_package(pybind11 CONFIG REQUIRED)
 
