CMake: better handling of python and qt dependencies, IVW_ENABLE_QT and IVW_ENABLE_PYTHON not guard all usage of qt and python.
Various other cmake cleanup and refactoring.

--- a/modules/base/CMakeLists.txt
+++ b/modules/base/CMakeLists.txt
@@ -281,6 +281,6 @@ if(IVW_TEST_BENCHMARKS)
     add_subdirectory(tests/benchmarks)
 endif()
 
-if(IVW_USE_PYTHON)
+if(IVW_ENABLE_PYTHON AND IVW_MODULE_PYTHON3)
     add_subdirectory(bindings)
 endif()
