--- a/modules/cimg/ext/cimg/CMakeLists.txt
+++ b/modules/cimg/ext/cimg/CMakeLists.txt
@@ -5,5 +5,5 @@ target_include_directories(cimg INTERFACE include)
 target_compile_definitions(cimg INTERFACE 
 	cimg_verbosity=0 # Disable all cimg output
 	cimg_display=0   # Do not use any gui stuff
-	$<$<AND:$<VERSION_GREATER_EQUAL:${OpenMP_CXX_VERSION},3.0>,$<BOOL:${IVW_USE_OPENMP}>>:cimg_use_openmp>
+	$<$<AND:$<VERSION_GREATER_EQUAL:${OpenMP_CXX_VERSION},3.0>,$<BOOL:${IVW_ENABLE_OPENMP}>>:cimg_use_openmp>
 )
