--- a/modules/brushingandlinking/CMakeLists.txt
+++ b/modules/brushingandlinking/CMakeLists.txt
@@ -33,6 +33,6 @@ ivw_add_unittest(${TEST_FILES})
 # Create module
 ivw_create_module(${SOURCE_FILES} ${HEADER_FILES})
 
-if(IVW_USE_PYTHON)
+if(IVW_ENABLE_PYTHON)
     add_subdirectory(bindings)
 endif()
