Core: Added a module-system target that handled module loading, so we don't have to repeat all that in each app,  Also extends inviwo:::Version to handle proper preRelease and build info, added IVW_CFG_BUILD_VERSION to the cmake cache to be able to set build meta data in the version

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -113,7 +113,7 @@ if(IVW_TEST_INTEGRATION_TESTS OR IVW_TEST_UNIT_TESTS)
     add_subdirectory(tests/testutil)         # Add test utils, used in the module unit tests
 endif()
 
-ivw_register_modules(all_modules)            # Add inviwo modules
+add_subdirectory(src/sys)                    # Add inviwo module system
 
 # Add all the applications, uses the modules.
 if(IVW_ENABLE_QT)
