--- a/.github/workflows/inviwo.yml
+++ b/.github/workflows/inviwo.yml
@@ -46,7 +46,7 @@ jobs:
             preset: ninja-developer
             targets: 'all'
             installer: 'inviwo-installer-macos'
-            artifact: 'build/Inviwo-v*.dmg'
+            artifact: 'build/inviwo-v*.dmg'
           
           - system: linux
             os: 'ubuntu-22.04'
@@ -304,11 +304,11 @@ jobs:
       shell: pwsh
       run: |
         # find the name of the installer
-        $exe = Get-ChildItem -Name Inviwo-*.exe
+        $exe = Get-ChildItem -Name inviwo-*.exe
         # launch the nsis installer in "silent mode" (/S), should run without user interaction
         Invoke-expression "./$exe /S"
         # this will spawn the installer in the background so we need to wait for it to finish
-        $proc = Get-Process | where {$_.ProcessName -like "Inviwo-*"} | Select-Object -First 1
+        $proc = Get-Process | where {$_.ProcessName -like "inviwo-*"} | Select-Object -First 1
         if ($proc) { 
           Wait-Process -Id $proc.id
         }
@@ -318,10 +318,10 @@ jobs:
       shell: pwsh
       run: |
         $ver = (Get-ChildItem -Name C:/"Program Files"/Inviwo/*)
-        Invoke-expression "C:/'Program Files'/Inviwo/$ver/bin/Inviwo-cli.exe --logconsole --quit"
+        Invoke-expression "C:/'Program Files'/Inviwo/$ver/bin/inviwo-cli.exe --logconsole --quit"
         if($LASTEXITCODE -ne 0) {
-          Invoke-expression "C:\'Program Files (x86)'\'Windows Kits'\10\Debuggers\x64\gflags.exe /i C:/'Program Files'/Inviwo/$ver/bin/Inviwo-cli.exe +sls"
-          Invoke-Expression "C:\'Program Files (x86)'\'Windows Kits'\10\Debuggers\x64\cdb.exe -g -c q C:/'Program Files'/Inviwo/$ver/bin/Inviwo-cli.exe"
+          Invoke-expression "C:\'Program Files (x86)'\'Windows Kits'\10\Debuggers\x64\gflags.exe /i C:/'Program Files'/Inviwo/$ver/bin/inviwo-cli.exe +sls"
+          Invoke-Expression "C:\'Program Files (x86)'\'Windows Kits'\10\Debuggers\x64\cdb.exe -g -c q C:/'Program Files'/Inviwo/$ver/bin/inviwo-cli.exe"
         }
     
     # Macos
@@ -342,7 +342,7 @@ jobs:
       shell: bash
       run: |
         cd /Applications/Inviwo.app/Contents/MacOS/
-        ./Inviwo --logconsole --quit
+        ./inviwo --logconsole --quit
 
   update-api-docs:
     if: github.ref == 'refs/heads/master'
